--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,6 @@ root = true
 
 [*]
 end_of_line = lf
-insert_final_newline = true
+insert_final_newline = false
 max_line_length = 100
 indent_style = tab
